--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -37,9 +37,9 @@ The ER task followed a block design (see Figure X). Participants were told to ac
 # lists contain arousal and valence values of each picture
 stim_negative = readxl::read_xlsx(file.path(here("01_Paradigms","ER-ED","ER_ED","Stimuli","negative.xlsx")), range = cell_cols("A:D"))
 
-stim_neutral = readxl::read_xlsx(file.path(here("01_Paradigms","ER-ED","ER_ED","Stimuli","neutral.xlsx")))
+stim_neutral = readxl::read_xlsx(file.path(here("01_Paradigms","ER-ED","ER_ED","Stimuli","neutral.xlsx")), range = cell_rows(1:21))
 
 ```
 ## 2.4. Stimuli
 
-Pictures used in the paradigm were selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS) [@Lang2008]. The 20 neutral pictures (Valence (V): _M_ $\pm$ _SD_ = 4.81 $\pm$ 0.52; Arousal (A): _M_ $\pm$ _SD_ = 3.00 $\pm$ 0.65)
+Pictures used in the paradigm were selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS) [@Lang2008]. The 20 neutral pictures (Valence (V): _M_ $\pm$ _SD_ = `r round(mean(stim_neutral$Valenz), digits = 2)` $\pm$ `r round(sd(stim_neutral$Valenz), digits = 2)`; Arousal (A): _M_ $\pm$ _SD_ = `r round(mean(stim_neutral$Arousal), digits = 2)` $\pm$ `r round(sd(stim_neutral$Arousal), digits = 2)`) depicted content related to the categories persons, objects, and scenes. Furhter, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, were used. An evolutionary algorithm () was used to cluster these pictures into five sets with comparable  
