--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -25,4 +25,14 @@
   year      = {2008},
 }
 
+@Misc{RStudioTeam2020,
+  author    = {{RStudio Team}},
+  note      = {Programmers: \_:n3594},
+  title     = {{RStudio}: {Integrated} development for {R}},
+  year      = {2020},
+  address   = {Boston, MA},
+  publisher = {RStudio, PBC},
+  url       = {http://www.rstudio.com},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
