--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -6,9 +6,11 @@ csl: apa7.csl
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
-library(targets)
-library(readxl)
-library(here)
+
+library(targets) # to keep track of all relevant files
+library(readxl) # import excel files
+library(here) # to set directories without defined paths
+library(papaja) # APA conform output
 
 # set top level directory to source file
 here::i_am("flag_project_root_COGERED.txt")
@@ -16,6 +18,7 @@ here::i_am("flag_project_root_COGERED.txt")
 
 # 2. Method
 
+ 
 "We report how we determined our sample size, all data exclusions (if any), all manipulations, and all measures in the study" in compliance with the 21-word-solution of open science [@Simmons2012]
 
 ## 2.1 Power analysis and participants
