--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -27,7 +27,10 @@ Participants
 
 ## 2.2 Experimental procedure
 
-The study consisted of two sessions. Both sessions took place in a shielded cabin with constant lighting. Participants received information about the procedure, signed an informed consent form and filled out a 
+The study consisted of two sessions. 
+Both sessions took place in a shielded cabin with constant lighting. 
+Before each session, participants received information about the respective experimental procedure and signed informed consent. 
+
 
 ## 2.3 Emotion regulation paradigm 
 
