--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -35,4 +35,42 @@
   url       = {http://www.rstudio.com},
 }
 
+@Article{Harris2019,
+  author     = {Harris, Paul A. and Taylor, Robert and Minor, Brenda L. and Elliott, Veida and Fernandez, Michelle and O'Neal, Lindsay and McLeod, Laura and Delacqua, Giovanni and Delacqua, Francesco and Kirby, Jacqueline and Duda, Stephany N.},
+  journal    = {Journal of Biomedical Informatics},
+  title      = {The {REDCap} consortium: {Building} an international community of software platform partners},
+  year       = {2019},
+  issn       = {1532-0464},
+  month      = jul,
+  pages      = {103208},
+  volume     = {95},
+  abstract   = {The Research Electronic Data Capture (REDCap) data management platform was developed in 2004 to address an institutional need at Vanderbilt University, then shared with a limited number of adopting sites beginning in 2006. Given bi-directional benefit in early sharing experiments, we created a broader consortium sharing and support model for any academic, non-profit, or government partner wishing to adopt the software. Our sharing framework and consortium-based support model have evolved over time along with the size of the consortium (currently more than 3200 REDCap partners across 128 countries). While the “REDCap Consortium” model represents only one example of how to build and disseminate a software platform, lessons learned from our approach may assist other research institutions seeking to build and disseminate innovative technologies.},
+  doi        = {10.1016/j.jbi.2019.103208},
+  file       = {:Harris2019 - The REDCap Consortium_ Building an International Community of Software Platform Partners.pdf:PDF},
+  keywords   = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  language   = {en},
+  shorttitle = {The {REDCap} consortium},
+  url        = {https://www.sciencedirect.com/science/article/pii/S1532046419301261},
+  urldate    = {2021-08-24},
+}
+
+@Article{Harris2009,
+  author   = {Harris, Paul A. and Taylor, Robert and Thielke, Robert and Payne, Jonathon and Gonzalez, Nathaniel and Conde, Jose G.},
+  journal  = {Journal of Biomedical Informatics},
+  title    = {Research electronic data capture ({REDCap})—{A} metadata-driven methodology and workflow process for providing translational research informatics support},
+  year     = {2009},
+  issn     = {1532-0464},
+  month    = apr,
+  number   = {2},
+  pages    = {377--381},
+  volume   = {42},
+  abstract = {Research electronic data capture (REDCap) is a novel workflow methodology and software solution designed for rapid development and deployment of electronic data capture tools to support clinical and translational research. We present: (1) a brief description of the REDCap metadata-driven software toolset; (2) detail concerning the capture and use of study-related metadata from scientific research teams; (3) measures of impact for REDCap; (4) details concerning a consortium network of domestic and international institutions collaborating on the project; and (5) strengths and limitations of the REDCap system. REDCap is currently supporting 286 translational research projects in a growing collaborative network including 27 active partner institutions.},
+  doi      = {10.1016/j.jbi.2008.08.010},
+  file     = {:Harris2009 - Research Electronic Data Capture (REDCap)—A Metadata Driven Methodology and Workflow Process for Providing Translational Research Informatics Support.pdf:PDF},
+  keywords = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  language = {en},
+  url      = {https://www.sciencedirect.com/science/article/pii/S1532046408001226},
+  urldate  = {2021-08-24},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
