--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -43,10 +43,20 @@ A training session was performed to ensure that all participants were able to im
 Next, electrodes to measure EMG were attached and the ER paradigm was conducted. 
 Two days after the secon sessoin, participants received a link to an online survey containing different questionnaires to assess broad and narrow personality traits and measures of well-being.
 
+Participants received 8.00€ per hour or course credit as compensation for participation.
+Study data were collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
 
 ## 2.3 Emotion regulation paradigm 
 
-The ER task followed a block design (see Figure X). Participants were told to actively view neutral and negative pictures (see [2.4. Stimuli](##stimuli)).
+The ER paradigm roughly consisted of two parts. 
+Part one could be described as standard ER task that followed a block design (see Figure X). 
+Participants were told to actively view neutral and negative pictures (see [2.4. Stimuli](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing and expressive suppression, respectively. 
+Every participant first had the condition "active viewing-neutral" that served as a baseline condition.
+During this block, 20 neutral pictures were presented.
+Participants were asked to "actively view all pictures and permit all emotions that may arise."
+In the second block, participants actively viewed negative pictures.
+During the third, fourth, and fifth block, participants saw negative pictures and were asked to regulate their emotions using distraction, distancing, and suppression.
+
 
 ## 2.4. Stimuli
 ```{r stimvalues, echo = FALSE}
