--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -73,4 +73,16 @@
   urldate  = {2021-08-24},
 }
 
+@Article{Scheffel2021,
+   author = {Scheffel, C. and Graupner, S. T. and Gartner, A. and Zerna, J. and Strobel, A. and Dorfel, D.},
+   title = {Effort beats effectiveness in emotion regulation choice: Differences between suppression and distancing in subjective and physiological measures},
+   journal = {Psychophysiology},
+   volume = {00},
+   pages = {e13908},
+   ISSN = {1540-5958 (Electronic)
+0048-5772 (Linking)},
+   DOI = {10.1111/psyp.13908},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/34310724},
+   year = {2021},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
