--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -85,4 +85,23 @@
    url = {https://www.ncbi.nlm.nih.gov/pubmed/34310724},
    year = {2021},
 }
+
+@Article{Greiner2015,
+  author     = {Greiner, Ben},
+  journal    = {Journal of the Economic Science Association},
+  title      = {Subject pool recruitment procedures: {Organizing} experiments with {ORSEE}},
+  year       = {2015},
+  issn       = {2199-6784},
+  month      = jul,
+  note       = {Number: 1},
+  number     = {1},
+  pages      = {114--125},
+  volume     = {1},
+  abstract   = {This paper discusses aspects of recruiting subjects for economic laboratory experiments, and shows how the Online Recruitment System for Economic Experiments can help. The software package provides experimenters with a free, convenient, and very powerful tool to organize their experiments and sessions.},
+  doi        = {10.1007/s40881-015-0004-4},
+  language   = {en},
+  shorttitle = {Subject pool recruitment procedures},
+  urldate    = {2020-06-05},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
