--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -13,7 +13,7 @@ library(here) # to set directories without defined paths
 library(papaja) # APA conform output
 
 # set top level directory to source file
-here::i_am("flag_project_root_COGERED.txt")
+here::i_am("flag_project_root_CERED.txt")
 ```
 
 # 2. Method
